# lizards

./: README.md  tmpl.cgi
OO/: Makefile  README  border.c  common.h  config.h  feature.c  hash.c  hash.h  list.c  main.c  player.c  province.c  string.c  world.c
cairo/: CUST1.JS  CUST1.MAP  CUST2.JS  CUST2.MAP  CUST3.JS  CUST3.MAP  CUST4.JS  CUST4.MAP  LAYOUT.JS  Makefile  Makefile.in  Makefile.rules  Makefile.rules.in  README  aclocal.m4  bg.lua  canvas.html  canvas.js  config.status  configure  configure.ac  cust.htm  default.css  default.js  dir.cc  feature.cc  game.cc  game.js  game.xml  gg.js  grid.cc  grid.js  grid.xml  hex.cc  hit.lua  index.html  js.lua  js2imap  lay.lua  layout-01.js  (+50 more)
cairo/RCS/: default.css,v  game.cc,v  layout.cc,v  output.cc,v  overlay.cc,v  reload.cgi,v  serial.cc,v  template.cc,v
cairo/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cairo/lua/: CUST1.JS  CUST1.MAP  CUST2.JS  CUST3.JS  CUST4.JS  Json.lua  LuaJSON_lib.c  Makefile  bg.lua  default.css  default.js  full.html  js.lua  json-test.lua  layout-1.js  layout.lua  layouts.lua  ll.lua  lua_lizards_wrap.cxx  newgame.lua  readme.txt  single-embed.html  single.html  swamp.js  template.lua  test-template.js
cairo/perl/: LAYOUT.JS  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  Makefile.old  game.pl  lizards.swg  lizards_wrap.cxx  test.js  test.pl
cairo/perl/blib/lib/: lizards.pm
cairo/python/: Makefile  lizards.py  python_lizards_wrap.cxx
cairo/tmp/: 12709.js  13452.js  23766.js  24615.js  26160.js  26316.js  2771.js  2776.js  2863.js  9609.js
cxx/: C1.MAP  CUST1.MAP  CUST5.MAP  LAYOUT.TXT  Makefile  Makefile.in  TEMP1.MAP  TEMP2.MAP  TEMP3.MAP  TEMP4.MAP  TEMP5.MAP  TEMP6.MAP  TEMP7.MAP  TEMP8.MAP  Test.LORDS001  Test.STARTLOG  Test.bak  Test.xml  Test0001.txt  Test0002.txt  Test0003.txt  Test0004.txt  aclocal.m4  b.map  base.cc  bordshuffle.cc  cairo  cairo.cc  cairo.cgi  cctest.cc  chants.cc  clanrank.cc  clanreport.cc  config.status  configure  configure.ac  create.cc  create.cc,v  debug.cc  debug.ff  (+55 more)
cxx/RCS/: cairo.cc,v
cxx/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
cxx/lua/: Makefile  blank.lua  feature.cc  foo.lua  hex.cc  local.h  lua  lua.cc  lua.cc,v  map.cc  player.cc  world.cc
cxx/misc/: den-1  den1  swamp  temple
cxx/old/: abc1  abc2  fertile-1  ff-000.ps  fix4.pl  foo.xsl  fred.ps  gtkprint.cc  lizards.xsl  out.xml  plains-1  plains-2  ps2png  ps2ppm  psprint.cc  psprint.cc,v  report.xsl  ruin  svgprint.cc  swamp-1  swamp.eps  test.cc  zz
cxx/symbols/: Makefile  cairo  cairo.c  defs.ps  den  den-2  den.h  fertile  final.ps  fix.pl  fix2.pl  fix3.pl  fred.ps  lizardface.h  original.ps  plain  plains  ps2cairo.pl  ps2svg.ps  ruin-1  ruin1  scrub  scrub-1  show.ps  svg.ps  svg2cairo.pl  symbols.c  symbols.h  symbols.i  temple-1  temple.fig  temple.fig.bak  temple1
cxx/xml/: Makefile  Test.LWLSTAT  main.c  out.xml  parse.output  parse.tab.c  parse.tab.h  parse.y  std2xml  token.c  token.l
guile/: Makefile  aa.scm  feature.c  hex.c  lguile  lguile.c  lizards.h  player.c  spy.c  world.c
lizards-rs/: Cargo.toml
lizards-rs/src/: floats.rs  main.rs  point.rs
server/: Makefile  Makefile.in  config.cache  config.h.in  config.status  configure  configure.ac  connect  connect.c  lexicon.cc  (+6 more)
(+867 files in other folders)
