AC_INIT(lizards.h)
AC_CONFIG_AUX_DIR(etc)
AC_HEADER_STDC
AC_PROG_CXX
AC_CHECK_HEADERS(unistd.h getopt.h errno.h stdlib.h malloc.h string.h)
AM_PATH_GLIB_2_0
AM_PATH_GTK_2_0
AM_PATH_XML2

PKG_CHECK_MODULES(CAIRO, cairo >= 1.6.4)
PKG_CHECK_MODULES(CAIROMM, cairomm-svg-1.16 >= 1.0.0)
PKG_CHECK_MODULES(RSVG, librsvg-2.0 >= 2.32.0)
PKG_CHECK_MODULES(JSON, json-c >= 0.11)

AC_SUBST(XMLPP_CFLAGS)
AC_SUBST(XMLPP_LIBS)
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(SVGCAIRO_CFLAGS)
AC_SUBST(SVGCAIRO_LIBS)
AC_SUBST(CAIROMM_CFLAGS)
AC_SUBST(CAIROMM_LIBS)
AC_SUBST(RSVG_CFLAGS)
AC_SUBST(RSVG_LIBS)

AC_OUTPUT(Makefile Makefile.rules)
