AC_INIT
AC_CONFIG_SRCDIR([lizards.h])
AC_CONFIG_AUX_DIR(etc)
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_CXX
AC_CHECK_HEADERS(unistd.h getopt.h errno.h stdlib.h malloc.h string.h)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.72.0)
PKG_CHECK_MODULES(XMLPP, libxml-2.0 >= 2.9.0)
PKG_CHECK_MODULES(CAIRO, cairo >= 1.17.4)
PKG_CHECK_MODULES(CAIROMM, cairomm-svg-1.16 >= 1.0.0)
PKG_CHECK_MODULES(RSVG, librsvg-2.0 >= 2.32.0)
PKG_CHECK_MODULES(JSON, json-c >= 0.11)

AC_SUBST(XMLPP_CFLAGS)
AC_SUBST(XMLPP_LIBS)
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(CAIROMM_CFLAGS)
AC_SUBST(CAIROMM_LIBS)
AC_SUBST(RSVG_CFLAGS)
AC_SUBST(RSVG_LIBS)

AC_CONFIG_FILES([Makefile Makefile.rules])
AC_OUTPUT
