AC_INIT
AC_CONFIG_SRCDIR([lizards.cc])
AC_CONFIG_AUX_DIR(etc)
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP

AC_CHECK_HEADERS(unistd.h getopt.h errno.h stdlib.h malloc.h string.h)

dnl AM_PATH_GLIB_2_0
dnl AM_PATH_GTK_2_0
dnl AM_PATH_GTKGLEXT_1_0
dnl AM_PATH_XML2

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.80.0)
PKG_CHECK_MODULES(GTK, gtk+-3.0 >= 3.24.50)
PKG_CHECK_MODULES(XMLPP, libxml++-3.0 >= 3.0.0)
PKG_CHECK_MODULES(CAIRO, cairo >= 1.6.4)
PKG_CHECK_MODULES(CAIROMM, cairomm-1.0 >= 1.0.0)
PKG_CHECK_MODULES(RSVG, librsvg-2.0 >= 2.32.0)

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(XMLPP_CFLAGS)
AC_SUBST(XMLPP_LIBS)
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(SVGCAIRO_CFLAGS)
AC_SUBST(SVGCAIRO_LIBS)
AC_SUBST(CAIROMM_CFLAGS)
AC_SUBST(CAIROMM_LIBS)
AC_SUBST(RSVG_CFLAGS)
AC_SUBST(RSVG_LIBS)

dnl AM_PATH_GTS(0.7.5)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

