[package]
name = "lizards-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-enum = "1.2.0"
rand = "0.9.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2.3"
variant_count = "1.2"
